k8s-infra/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linker-frontend
  namespace: devops-project
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # Using the version tag identified in the build pipeline
        image: hammedbabatunde/devopsbootcamp-frontend:1.11
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-project
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
