k8s-infra/linker-ingress.yaml

apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: linker-ingress

  namespace: devops-project

  annotations:

    cert-manager.io/cluster-issuer: "letsencrypt-prod"

    acme.cert-manager.io/http01-edit-in-place: "true"

spec:

  ingressClassName: public

  tls:

  - hosts:

    - tundehammed.online

    secretName: tundehammed-online-tls

  rules:

  - host: tundehammed.online

    http:

      paths:

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: backend-service

            port:

              number: 80

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80
